# Autowiki_fandom

./: .gitignore  =4.30  README.md  data  demo.py  pyproject.toml  requirements-article-retrieval.txt  requirements-span-id.txt
.github/workflows/: test.yml
configs/: article_retrieval.yaml  article_retrieval_base.yaml  article_retrieval_kudremukh.yaml  ground_truth.yaml  linking.yaml  scraping.yaml  span_id.yaml  span_id_base.yaml  span_id_kudremukh.yaml  span_id_skanda.yaml
configs/article_retrieval/: article_retrieval.yaml  base.yaml  kudremukh.yaml
configs/data_processing/: ground_truth.yaml  scraping.yaml  wikipedia_ground_truth.yaml
configs/linking/: base.yaml  linking.yaml
configs/span_id/: base.yaml  error_analysis.yaml  kudremukh.yaml  skanda.yaml  span_id.yaml
data/research/: article_retrieval_experiments.csv  linking_experiments.csv  span_id_experiments.csv  span_id_experiments_aggregated.csv
data/stats/: beverlyhillscop.json  corpus_summary.json  harrypotter.json  money-heist.json  wikipedia.json
docs/: architecture_article_retrieval.md  architecture_linking_pipeline.md  architecture_span_id.md  data_sources_wikipedia.md  experiments_span_id.md
docs/figures/: figure_01_end_to_end.mmd  figure_02a_task0_dataset_preprocessing.mmd  figure_02b_task1_span_identification.mmd  figure_02c_task2_article_retrieval.mmd  figure_02d_task3_linking_pipeline.mmd
scripts/: run_full_pipeline.py  summarise_corpus.py  visualise_results.py
src/: __init__.py
src/article_retrieval/: embedder.py  (+9 more)
tests/: conftest.py  test_scrape_pipeline.py  test_stats_utils.py
(+897 files in other folders)
