[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autowiki"
version = "0.1.0"
description = "Span identification on Fandom wiki articles"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "datasets",
    "seqeval",
    "requests",
    "beautifulsoup4",
    "pyyaml>=6.0",
    "nltk",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]
